5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4376/executions/1596_1446.log
== TEST (2019-03-26 18:35:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = input()
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael,  3)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    qtd_de_michael = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:36:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = input()
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael,  3)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    qtd_de_michael = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael,  3)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael,  3)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael,  3)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(qtd_de_michael,  3)
print(a)

-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:38:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(qtd_de_michael,  3)
print(a)

-- EXECUTION TIME:
0.155438
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
